--- a/app.json
+++ b/app.json
@@ -25,5 +25,30 @@
   "author": {
     "name": "Joshua de Gier",
     "email": "info@pendo.nl"
+  },
+  "flow": {
+    "triggers": [
+      {
+        "title": {
+          "en": "When Ring armed state changes"
+        },
+        "hint": {
+          "en": "This card is triggered every time the active armed state of a Ring location changes"
+        },
+        "tokens": [
+          {
+            "type": "string",
+            "name": "armed-state",
+            "title": {
+              "en": "Armed state"
+            },
+            "example": {
+              "en": "Holds the current state of the Ring location"
+            }
+          }
+        ],
+        "id": "ring-armed-state-changed"
+      }
+    ]
   }
 }
